# cogamer

./: .gitignore  AGENTS.md  CLAUDE.md  IMPROVE.md  README.md  pyproject.toml
.claude/: settings.json
.coach/: state.json  todos.md
.cogent/: IDENTITY.md  MEMORY.md
cogames/: __init__.py  coach.py  gamelet.py  player.py  policy.py
cogames/cvc/: critic.py  cvc_policy.py  programs.py  table_policy.py
cogent/skills/: cogames.md  query.md
cogs/counter.cog/: counter.py  manifest.toml
cogs/doubler.cog/: doubler.py  manifest.toml
cogs/gated.cog/: manifest.toml
cogs/generator.cog/: generator.py  manifest.toml
cogs/jury.cog/: jury.py  manifest.toml
cogs/jury_trial.cog/: manifest.toml  trial.py
cogs/pipeline.cog/: manifest.toml  pipeline.py
cogs/printer.cog/: manifest.toml  printer.py
cogs/show_trial.cog/: manifest.toml  show_trial.py
docker/: Dockerfile  Dockerfile.api
docs/: README.md  architecture.md  capabilities.md  coach-dashboard.html  cogames.md  cvc.md  mechanics.md  platform.md  rules.md  strategy.md  tools.md
docs/design/: README.md
docs/plans/: 2026-04-07-cogamer-package.md  (+2 more)
infra/: app.py  cdk.json  stack.py
lifecycle/: wake.md
policy_bundle/: coglet_policy.py
skills/: cogames.md  dashboard.md  improve.md
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_channel_plugin.py  test_cli.py  test_cogweb_cli.py  test_cogweb_ui.py  test_cvc_pco_components.py  test_db.py  test_ecs.py  test_models.py  test_pco_llm_experiment.py  test_pco_synthesis.py  test_secrets.py  test_table_policy.py
tools/: query_game.py
(+98 files in other folders)
